changed the home button

--- a/skills.html
+++ b/skills.html
@@ -64,17 +64,10 @@
     </style>
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Kennedy Maina</h1>
-            <p>Cybersecurity Analyst | OSINT Specialist | Ethical AI for Protection | Software & Automation Engineer</p>
-        </div>
-    </header>
-
     <nav>
         <div class="container">
             <ul>
-                <li><a href="index.html">🏠 Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="education.html">Education</a></li>
@@ -128,7 +121,7 @@
                 <div class="skill-card">
                     <div class="skill-card-inner">
                         <div class="skill-card-front"><h3>Incident Response</h3></div>
-                        <div class="skill-card-back"><ul><li>SIEM Monitoring</li><li>Threat Intelligence</li><li>Log Analysis</li><li>Forensics</li></ul></div>
+                        <div class="skill-card-back"><ul><li>SIEM Monitoring</li><li>Threat Intelligence</li><li>Log Analysis</li><li>Digital Forensics</li><li>Incident Response</li></ul></div>
                     </div>
                 </div>
                 <div class="skill-card">
