--- a/index.html
+++ b/index.html
@@ -9,13 +9,11 @@
 <body>
     <header>
         <div class="container">
-            <h1>Kennedy Maina</h1>
+            <h1>Hi am Kennedy Maina</h1>
             <p>Cybersecurity Analyst | OSINT Specialist | Ethical AI for Protection | Software & Automation Engineer</p>
-            <img src="https://quotes-github-readme.vercel.app/api?type=horizontal&theme=radical" alt="Tech Quote" style="margin-top: 2rem;" />
-            <div class="tech-bubbles-container">
-                <div class="bubble tech-bubble" id="ai-bubble">Wonder</div>
-                <div class="bubble tech-bubble" id="n8n-bubble">Wander</div>
-                <div class="bubble tech-bubble" id="future-bubble">Repeatw</div>
+            <div class="quote-container">
+                <div class="quote-label-bubble">Random Tech Quote</div>
+                <img src="https://quotes-github-readme.vercel.app/api?type=horizontal&theme=radical" alt="Tech Quote" />
             </div>
         </div>
     </header>
@@ -23,7 +21,7 @@
 
     <section id="welcome">
         <div class="container">
-            <h2>Hi, welcome to my portfolio...</h2>
+            <h2>Welcome to my portfolio...</h2>
             <div class="bubble-container">
                 <a href="about.html" class="bubble">About Me</a>
                 <a href="skills.html" class="bubble">Skills</a>
@@ -35,16 +33,19 @@
             </div>
             <div class="contact-info">
                 <a href="mailto:mainakennedy28@proton.me" class="contact-bubble">
-                    <span class="icon">📧</span> Email
+                    <img src="https://img.shields.io/badge/email-%23D14836.svg?style=for-the-badge&logo=gmail&logoColor=white" alt="Email Icon" class="icon">
                 </a>
                 <a href="tel:+254794473044" class="contact-bubble">
                     <span class="icon">📞</span> Phone
                 </a>
                 <a href="https://linkedin.com/in/maina-kennedy-7aaa10376" target="_blank" class="contact-bubble">
-                    <span class="icon">💼</span> LinkedIn
+                    <img src="https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white" alt="LinkedIn Icon" class="icon">
                 </a>
                 <a href="https://github.com/Cyb3rch37" target="_blank" class="contact-bubble">
-                    <span class="icon">💻</span> GitHub
+                    <img src="https://camo.githubusercontent.com/7e282220b8ec0dd29cf99be1c0f5e82d74a42bc84ed834ee6afd86b4bad3bfee/68747470733a2f2f696d672e736869656c64732e696f2f62616467652f6769746875622d2532333132313031312e7376673f7374796c653d666f722d7468652d6261646765266c6f676f3d676974687562266c6f676f436f6c6f723d7768697465" alt="GitHub Icon" class="icon">
+                </a>
+                <a href="https://cyb3rch37.github.io/personal-portfolio/Resume.pdf" target="_blank" class="contact-bubble" download>
+                    <span class="icon"></span>Download CV
                 </a>
             </div>
         </div>
