--- a/projects.html
+++ b/projects.html
@@ -7,17 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Kennedy Maina</h1>
-            <p>Cybersecurity Analyst | OSINT Specialist | Ethical AI for Protection | Software & Automation Engineer</p>
-        </div>
-    </header>
-
     <nav>
         <div class="container">
             <ul>
-                <li><a href="index.html">🏠 Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="skills.html">Skills</a></li>
                 <li><a href="education.html">Education</a></li>
