update on readme & my about

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <section id="about">
         <div class="container">
             <h2>About Me</h2>
-            <p>Am a Cybersecurity Analyst with 2+ years of experience in data analysis, web penetration testing, ethical hacking, and Linux systems administration. Proven ability to detect, analyze, and mitigate security incidents using threat hunting, vulnerability assessment, incident response, and open source intelligence techniques. Proficient in penetration testing and web application security assessments. Passionate about ethical AI, blockchain technology, and automation engineering, with continuous learning through PLP Academy, TryHackMe, The Odin Project, Cisco Network Academy, Hack The Box, and HackerOne.</p>
+            <p>Am a Cybersecurity Analyst with 2+ years of experience in data analysis, web penetration testing, ethical hacking, and Linux systems administration. Proven ability to detect, analyze, and mitigate security incidents using threat hunting, vulnerability assessment, incident response, and open source intelligence techniques. Proficient in penetration testing and web application security assessments. Passionate about software engineering, ethical AI, blockchain technology, and automation engineering, with continuous learning through PLP Academy, TryHackMe, The Odin Project, Cisco Network Academy, Hack The Box, and HackerOne.</p>
         </div>
     </section>
 
