added a profile picture and a css matrix animation

--- a/education.html
+++ b/education.html
@@ -59,6 +59,7 @@
     </style>
 </head>
 <body>
+    <div class="matrix-container"></div>
     <nav>
         <div class="container">
             <ul>
@@ -122,58 +123,5 @@
             <p>&copy; 2025 Kennedy Maina</p>
         </div>
     </footer>
-    <script>
-        const canvas = document.createElement('canvas');
-        document.body.insertBefore(canvas, document.body.firstChild);
-        const ctx = canvas.getContext('2d');
-
-        canvas.style.position = 'fixed';
-        canvas.style.top = '0';
-        canvas.style.left = '0';
-        canvas.style.zIndex = '-1';
-
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
-
-        let columns = Math.floor(canvas.width / 20);
-        let drops = [];
-
-        for (let i = 0; i < columns; i++) {
-            drops[i] = 1;
-        }
-
-        const characters = '0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ';
-
-        function draw() {
-            ctx.fillStyle = 'rgba(10, 25, 47, 0.1)';
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-            ctx.fillStyle = '#64ffda';
-            ctx.font = '15px monospace';
-
-            for (let i = 0; i < drops.length; i++) {
-                const text = characters.charAt(Math.floor(Math.random() * characters.length));
-                ctx.fillText(text, i * 20, drops[i] * 20);
-
-                if (drops[i] * 20 > canvas.height && Math.random() > 0.975) {
-                    drops[i] = 0;
-                }
-
-                drops[i]++;
-            }
-        }
-
-        setInterval(draw, 33);
-
-        window.addEventListener('resize', () => {
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
-            columns = Math.floor(canvas.width / 20);
-            drops = [];
-            for (let i = 0; i < columns; i++) {
-                drops[i] = 1;
-            }
-        });
-    </script>
 </body>
 </html>
