--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="matrix-container"></div>
+    <iframe src="animation.html" class="background-animation"></iframe>
     <header>
         <div class="container">
             <img src="https://Cyb3rch37.github.io/personal-portfolio/profile.jpg" alt="Profile Picture" class="profile-picture">
-            <h1>Hi am Kennedy Maina</h1>
+            <h1>Hi am Kennedy Maina,</h1>
             <p>Cybersecurity Analyst | OSINT Specialist | Ethical AI for Protection | Software & Automation Engineer</p>
             <div class="quote-container">
                 <div class="quote-label-bubble">Random Tech Quote</div>
