--- a/education.html
+++ b/education.html
@@ -59,7 +59,7 @@
     </style>
 </head>
 <body>
-    <div class="matrix-container"></div>
+    <iframe src="animation.html" class="background-animation"></iframe>
     <nav>
         <div class="container">
             <ul>
