--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="matrix-container"></div>
+    <iframe src="animation.html" class="background-animation"></iframe>
     <nav>
         <div class="container">
             <ul>
